@@ -33,6 +33,10 @@
 	- Rename db0.c to db1.c, resurrect db2.c (from db3.c).
 	- Add ia64 and sparc64 changes.
 	- rpm.spec: add per-platform sub-directories.
+	- FreeBSD fixes (bero@redhat.com).
+	- include RPM-GPG-KEY in file manifest.
+	- simplify --last popt alias, date like -qi (bjerrick@easystreet.com).
+	- fix: alloca'd memory used outside of scope (alpha segfault).
 	
 3.0.3 -> 3.0.4
 	- use compressed filenames on install side.
